# rustmcp-rs

./: Cargo.toml  LICENSE-APACHE-zh  LICENSE-MIT  LICENSE-MIT-zh  README.md  README_zh.md
examples/: mcp_server.rs
src/: lib.rs  settings.rs
src/server/: mod.rs  prompts.rs  resources.rs  tools.rs  ws.rs
