[package]
name = "rustmcp"
version = "0.1.0"
edition = "2021"
authors = ["J-35S"]
description = "A Rust implementation of the Model Context Protocol (MCP) for building AI agent tools"
documentation = "https://docs.rs/rustmcp"
homepage = "https://github.com/J-35S/rustmcp-rs"
repository = "https://github.com/J-35S/rustmcp-rs"
readme = "README.md"
keywords = ["mcp", "ai", "agent", "tools", "protocol"]
categories = ["asynchronous", "network-programming", "web-programming"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.11"

[[example]]
name = "mcp_server"
path = "examples/mcp_server.rs"